everything working again

--- a/app/views/organizer/events/_form.html.erb
+++ b/app/views/organizer/events/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :visible, :label => "Visible to Public?" %>
     <%= f.input :artist, label: "Artist / Event Name", placeholder: "Crete Boom" %>
     <%= f.input :venue, label: "Name of Venue", placeholder: "The Rickshaw" %>
-    <%= f.input :new_location, label: "Location of Venue", hint: "#{request.location.address}" %>
+    <%= f.input :new_location, label: "Location of Venue", hint: "Dublin, Ireland" %>
     <%= f.input :capacity, placeholder: "100" %>
     <%= f.input :date, label: "Date of Event" %>
     <%= f.input :doors, label: "Event start time" %>
