--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,9 @@
           <h4>Update Card</h4>
           <p><%= @user.update_card %></p>
         </div>
+        <div><iframe width=\"480\" height=\"270\" src=\"http://www.youtube.com/embed/gmTWcEQW1r0?feature=oembed\" frameborder=\"0\" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="http://www.youtube.com/embed/gmTWcEQW1r0" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
 	</div>
