everything working now in the background

--- a/app/views/notifier/ticket.html.erb
+++ b/app/views/notifier/ticket.html.erb
@@ -11,7 +11,7 @@
 				<td>
 					<table width="600px" cellpadding="10" cellspacing="10" align="center" id="email-table">
 						<tr>
-							<td><%= render 'ticket_email' %></td>
+							<td><%= raw(@qr) %></td>
 						</tr>
 				</td>
 			</tr>
