--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,44 +1,24 @@
-// Place all the styles related to the Events controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-// cart box
-
-.centered-box {
-  margin: 0 auto;
-  text-align: center;
+.flex-video {
+  position: relative;
+  padding-top: 25px;
+  padding-bottom: 67.5%;
+  height: 0;
+  margin-bottom: 16px;
+  overflow: hidden;
 }
 
-#event-info {
-    img {
-    margin: 15px 25px;
-  }
+.flex-video.widescreen { padding-bottom: 57.25%; }
+.flex-video.vimeo { padding-top: 0; }
+
+.flex-video iframe,
+.flex-video object,
+.flex-video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
-
-#about-artist {
-    img {
-    margin-left: 20px;
-    margin-top: 20px;
-  }
-}
-
-// events index
-
-#events-searchbar  {
-  // padding: 20px;
-}
-
-#events-index-grid {
-  text-align: center;
-  // padding: 15px;
-}
-
-// organizer event view
-.option-buttons {
-  margin: 20px 0;
-}
-
-// organizer event index
-#organizer-event-new {
-  margin-bottom: 20px;
+@media only screen and (max-device-width: 800px), only screen and (device-width: 1024px) and (device-height: 600px), only screen and (width: 1280px) and (orientation: landscape), only screen and (device-width: 800px), only screen and (max-width: 767px) {
+  .flex-video { padding-top: 0; }
 }
