--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -32,9 +32,8 @@
         <h1>Did you ever want to put on an event...<br>
           <small>but you weren't sure if it was worth it?</small>
         </h1> <br>
-        <p class="lead">As a musician I get this a lot. People want me to play for them, I want to play for them but neither of us
-          wants to pay the cost of the show up front. Hoping to recoup costs ('build it and they will come') is worrisome  while paying for promotion is expensive with no guaranteed return. 100 Motels is a better option I think. Go ahead, try it out.  </p>
-        <%= link_to "New Event", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
+        <p class="lead">As a musician that was often my experience when it came to playing shows. Nobody wants to pay money up front and hope for a return. 100 Motels lets you try out an event, tweak it, and then decide. <br><br> Go ahead, try it out.  </p>
+        <%= link_to "Create a Free Event", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
       </div>
 
       <hr>
