--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -32,7 +32,7 @@
         <h1>Did you ever want to put on an event...<br>
           <small>but you weren't sure if it was worth it?</small>
         </h1> <br>
-        <p class="lead">As a musician that was often my experience when it came to playing shows. Nobody wants to pay money up front and hope for a return. 100 Motels lets you try out an event, tweak it, and then decide. <br><br> Go ahead, try it out.  </p>
+        <p class="lead">100 Motels lets you try out an event, tweak it, and then decide. <br><br> Go ahead, try it out.  </p>
         <%= link_to "Create a Free Event", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
       </div>
 
