better ticket checker setup

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -14,75 +14,22 @@
           <li class="nav-header">About 100 Motels</li>
 
           <li><a href="#how">How it Works</a></li>
-          <li><a href="#artist">Artists</a></li>
-          <li><a href="#organizing">Organizing a Show</a></li>
-          <li><a href="#attending">Attending a Show</a></li>
-          <li><a href="#requests">Requests</a></li>
-          <li><a href="#money">Funding</a></li>
         </ul>
     </div> <!-- /span3 -->
     <div class="span9">
       <!-- 100 Motels poster -->
 
 
-      <div class="section-box" id="intro">
-        <div class="label-box">100 Motels?</div>
+      <div class="" id="intro">
         <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
         <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
       </div>
 
-      <div class="section-box">
-        <div class="label-box">Why?</div>
-          <p class="">My experience with <a href="//creteboom.com">my own band</a> inspired me to try and change some things to make for a happier life for musicians. </p>
-          <p class="">My music has been listened to by more than a million people in ninety countries spread over five continents, but I've only ever played outside of my home city twice. 100 Motels is my attempt to fix that. </p>
-          <p class="">Check out this <a href="//seocahill.com">blog post</a> for more.  </p>
-      </div>
-
-      <div class="section-box">
-        <div class="label-box">Who is it for?</div>
-          <p class="">Personally, I want to live a full and satisfying artistic life without having to deal with the industry (<a href="//seocahill.com">more in this blog post</a>). 100 Motels was developed in that context.</p>
-          <p>However this doesn't preclude anyone from using it who still wants to operate inside the industry - independent or commercial artists, organizers, venue-owners, labels, record-stores, radio-stations, journalists or regular civilians. </p>
-          <p>There are no arbitrary rules like you'll see on other funding websites.</p>
-      </div>
-
-      <div class="section-box">
-        <div class="label-box">How do I use 100 Motels?</div>
-        <p>If you want to be an Organizer you need to have an account with <a href="//stripe.com">Stripe</a>, our payments processor. </p>
-        <p>Organizers have an administrative area where they create events, view ticket sales and check for artist requests (see next section).</p>
-        <p>If you're crowdfunding an event, you can rack up as many sales as you feel you need, before charging your customers. Sales monies are deposited in your account 7 days after you make the charge, minus Stripe and 100 Motels fees.</p>
-        <p>We also provide a free cross-platform mobile app for scanning tickets and keeping track of admissions on the night of the show.</p>
-        <br>
-          <a href="#">Back to top</a>
-      </div>
-
-      <div class="section-box" id="artist">
-        <div class="label-box">Artists and requests</div>
-        <p class="">Musicians are tormented by overlapping and often unnecessary web presences in my experience. The only thing we ask of our artist-users, other than an email and password, is to add a music playlist (youtube and vimeo are supported) to their account.</p>
-        <p>The playlist is used in the <strong>request</strong> system (click the request button at the top of an Event or Organizer page).</p>
-        <p>When you make a request the Organizer receives a private message with your details. If they like your playlist they can email you about setting up a show or about a support slot depending on what you're looking to do.</p>
-        <a href="#">Back to top</a>
-      </div>
-
-      <div class="section-box" id="attending">
-        <div class="label-box">Buying a Ticket</div>
-        <p>You can buy tickets with or without signing up for a user account.</p>
-        <p>Your may not be charged immediately depending on whether the event has reached its funding target.</p>
-        <p>Your tickets are emailed to you when your card is charged.</p>
-        <p>You are free to cancel your order up and until tickets are issued for the show.</p>
-        <p>You don't have to print anything, the Organizer will admit you by scanning the ticket-email on your phone. </p>
-        <p>If the event is cancelled for some reason, you get a refund of the full ticket price.</p>
-        <br>
-          <a href="#">Back to top</a>
-      </div>
-
-      <div class="section-box" id="money">
-        <div class="label-box">Fees and Charges</div>
+      <div class="" id="how">
+        <div class=""><h1>How it Works</h1></div>
         <div class="">
-          <p>100 Motels uses Stripe's payment infrastructure to operate a marketplace for organizers, artists and their customers. </p>
-          <p>Each organizer must connect their 100 Motels accounts with Stripe in order to accept cash for their events. This is a simple process and a normal checking account will suffice.</p>
-          <p>When an organizer decides to draw down money from their ticket sales, they are paid directly into their bank account minus <a href="https://stripe.com/us/help/pricing">Stripe's fees</a> (2.9% + 30c per transaction) and 100 Motel's fee (higher of $50 or 5%). These fees are non-refundable. </p>
-          <p>Organizers are currently restricted to holders of <strong>American or Canadian</strong> bank accounts. Unfortunately there is no service comparable to Stripe Apps outside of North America at the present time.</p>
-        </div><br>
+          <p class="lead"> Wouldn't you like to know.</p>
+        </div>
         <a href="#">Back to top</a>
       </div>
 
