--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -22,14 +22,17 @@
   </div>
   <div class="span2 offset2">
     <div class="btn-group">
-      <%= link_to "New Event", new_organizer_event_path(@event), class: "btn" %>
-      <%= link_to "Cancel Event", cancel_organizer_event_path(@event), class: "btn", data: { confirm: "Are you sure?" } %>
-    </div>
-  </div>
-  <div class="span3 offset1">
-    <div class="btn-group">
-      <%= link_to "Generate PDF", organizer_event_path(@event, format: "pdf"), class: "btn" %>
-      <%= link_to "Check In View", organizer_event_tickets_path(@event), class: "btn" %>
+      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+          More
+          <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li><%= link_to "New Event", new_organizer_event_path(@event) %></li>
+        <li><%= link_to "Cancel Event", cancel_organizer_event_path(@event), data: { confirm: "Are you sure you want to cancel the current event?" } %></li>
+        <li><%= link_to "Event orders PDF", organizer_event_path(@event, format: "pdf") %></li>
+        <li><%= link_to "Event tickets PDF", organizer_event_tickets_path(@event, format: "pdf") %></li>
+        <li><%= link_to "Checkin View", organizer_event_tickets_path(@event) %></li>
+      </ul>
     </div>
   </div> <!-- /button menu -->
   <hr>
