--- a/app/views/organizer/tickets/index.html.erb
+++ b/app/views/organizer/tickets/index.html.erb
@@ -1,33 +1,39 @@
-<div class="container">
-  <div class="row">
+<div class="container-very-narrow">
+  <div class="row-fluid">
     <div class="span12">
-      <ul class="dropdown-menu">
-        <% @events.each do |e| %>
-        <li><%= link_to "#{e.artist} | #{e.venue} | #{e.date.strftime('%d %b')}", organizer_event_tickets_path(e) %></li>
-        <% end %>
-      </ul>
+      <div class="btn-group pull-right">
+        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+          Change Event
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <% @events.each do |e| %>
+          <li><%= link_to "#{e.artist} | #{e.venue} | #{e.date.strftime('%d %b')}", organizer_event_tickets_path(e) %></li>
+          <% end %>
+          <li class="divider"></li>
+          <li><%= link_to "Back", organizer_event_path(@event) %></li>
+        </ul>
+      </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row-fluid">
     <div class="span12">
-      <%= link_to "PDF", organizer_event_tickets_path(@event, format: "pdf"), class: "btn" %>
-      <%= link_to "Back", organizer_event_path(@event), class: "btn" %>
       <p class="lead"><%= @tickets.where('admitted is not null').count %> out of <%= @tickets.count %> Admitted </p>
-      <%= form_tag organizer_event_tickets_path, method: :get, class: "" do %>
-          <%= text_field_tag :query, params[:query], class: "span3 pull-right", placeholder: "Enter Ticket Number" %>
+      <%= form_tag organizer_event_tickets_path, method: :get, class: "form-search", autocomplete: :off do %>
+          <%= number_field_tag :query, params[:query], class: "input-medium search-query", placeholder: "Enter Ticket Number" %>
+          <button type="submit" class="btn">Check</button>
       <% end %>
+      <p class="lead">Ticket Number: <%= @ticket.number if @ticket.present?%></p>
     </div>
   </div>
-  <div class="row">
+  <div class="row-fluid">
     <div class="span12">
       <table class="table table-striped">
         <tbody>
-         <% @tickets.each do |t| %>
-          <tr>
-            <td><%= link_to "#{t.order.email}  \##{t.quantity_counter}", order_path(t.order) %></td>
-            <td><%= t.admitted ? "Admitted #{t.admitted}" : "#{t.number}" %></td>
-            <td><%= link_to "Admit", organizer_event_ticket_path(@event, t), method: :put, class: "btn btn-warning", data: {confirm: "Admit #{t.number}?"} unless t.admitted %></td>
-          </tr>
+          <% if @ticket.present? %>
+            <tr><td>Name <%= @ticket.order.name %></td></tr>
+            <tr><td>Email <%= @ticket.order.email %></td></tr>
+            <tr><td>Card #<%= @ticket.order.last4 %></td></tr>
           <% end %>
         </tbody>
       </table>
