--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -23,31 +23,43 @@
   <div class="span2 offset2">
     <div class="btn-group">
       <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-          More
+          Actions
           <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
+        <li><%= link_to "View Event", event_path(@event) %></li>
         <li><%= link_to "New Event", new_organizer_event_path(@event) %></li>
         <li><%= link_to "Cancel Event", cancel_organizer_event_path(@event), data: { confirm: "Are you sure you want to cancel the current event?" } %></li>
-        <li><%= link_to "Event orders PDF", organizer_event_path(@event, format: "pdf") %></li>
-        <li><%= link_to "Event tickets PDF", organizer_event_tickets_path(@event, format: "pdf") %></li>
-        <li><%= link_to "Checkin View", organizer_event_tickets_path(@event) %></li>
+        <li><%= link_to "Orders PDF", organizer_event_path(@event, format: "pdf") %></li>
+        <li><%= link_to "Tickets PDF", organizer_event_tickets_path(@event, format: "pdf") %></li>
+        <li><%= link_to "Check-in", organizer_event_tickets_path(@event) %></li>
       </ul>
     </div>
   </div> <!-- /button menu -->
+  <div class="span3 offset1"><h2>$2999 <small>(inc. orders, net fees)</small></h2></div>
   <hr>
 </div> <!-- /row -->
 <div class="row">
   <aside class="span2">
     <ul class="nav nav-tabs nav-stacked">
-      <li><%= link_to "All", organizer_event_path(@event) %></li>
-      <li><%= link_to "Pending", request.path + '?pending=true' %></li>
+      <li><%= link_to raw('All <span class="badge badge-info pull-right">8</span>'), organizer_event_path(@event) %></li>
+      <li><%= link_to raw('Ordered <span class="badge badge-warning pull-right">4</span>'), request.path + '?pending=true' %></li>
       <li><%= link_to "Paid", request.path + '?paid=true' %></li>
-      <li><%= link_to "Tickets Sent", request.path + '?tickets_sent=true' %></li>
-      <li><%= link_to "Failed", request.path + '?failed=true' %></li>
-      <li><%= link_to "Refunded", request.path + '?refunded=true' %></li>
+      <li><%= link_to raw('Ticketed <span class="badge badge-success pull-right">2</span>'), request.path + '?tickets_sent=true' %></li>
+      <li><%= link_to raw('Failed <span class="badge badge-important pull-right">6</span>'), request.path + '?failed=true' %></li>
+      <li><%= link_to raw('Refunded <span class="badge badge-inverse pull-right">10</span>'), request.path + '?refunded=true' %></li>
     </ul>
   </aside>
+  <div class="span9">
+    <ul class="inline">
+  <li><h2>Sample</h2></li>
+  <li><h2>Sample</h2></li>
+  <li><h2>Sample</h2></li>
+  <li><h2>Sample</h2></li>
+  <li><h2>Sample</h2></li>
+  <li><h2>Sample</h2></li>
+</ul>
+  </div>
   <div class="span9">
       <%= hidden_field_tag "organizer", current_user.id %>
       <table class="table table-striped table-bordered" id="organizer-customers">
