--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -12,7 +12,7 @@
     <div class="stripe-controls" align="center">
       <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
         data-key="<%= ENV['STRIPE_PUBLIC_KEY'] %>" data-description="<%= @event.artist %>"
-        data-amount="<%= @event.ticket_price.to_i * 100 %>">
+        data-amount="">
       </script>
     </div>
   <% end %>
