--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -39,7 +39,7 @@
 					<h3><%= @event.price %><small> each</small></h3>
 					<%= render 'form' %>
 					<hr>
-					<h3>Total <%= number_to_currency raw('<span class="order-total"></span>') %> <small><a href="#" class="" data-toggle="popover" title="" data-content="Card Processing is 2.9% + 30c, our fee is only 1%!" data-original-title="Processing Fees" data-placement="left">inc. charges</a></small></h3>
+					<h3>Total <%= number_to_currency raw('<span class="order-total"></span>') %> <small><a href="#" class="" data-toggle="popover" title="" data-content="Card Processing is 2.9% + 30c, our fee is only 1%!" data-original-title="Processing Fees" data-placement="bottom">inc. charges</a></small></h3>
 				</div>
 			</div>
 		</section>
